examples/errors/type_error_2.pvl
// -*- tab-width:2 ; indent-tabs-mode:nil -*-
//:: cases TypeError2
//:: tools silicon
//:: verdict Error

class err {

 int x;
 
 void typeerror(){
   assert (\forall int i ; true ; Value(x));
 }
 
}
